src/scss/app.scss
//////////////////////////////////////////
// Imports                              //
//////////////////////////////////////////

@import "settings";
@import "normalize";
@import "foundation/components/global";
@import "foundation/components/type";
@import "foundation/components/forms";
@import "foundation/components/buttons";
@import "foundation/components/labels";
@import "foundation/components/top-bar";
@import "foundation/components/tables";
@import "foundation/components/tooltips";
@import "foundation/components/reveal";
@import "foundation/components/alert-boxes";


//////////////////////////////////////////
// Variables                            //
//////////////////////////////////////////

$base-font-size: 12px;
$container-margin: 8px;
$overlay-small-width: 220px;
$overlay-big-width: 545px;

$leftIconSize: 40px;


//////////////////////////////////////////
// Typography                           //
//////////////////////////////////////////

@font-face {
    font-family: 'fira_sans_regular';
    src: url('../fonts/FiraSans-Regular.eot');
    src: url('../fonts/FiraSans-Regular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/FiraSans-Regular.woff') format('woff'),
         url('../fonts/FiraSans-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}

h1, h2, h3, h4, h5, h6 {
  font-family: fira_sans_regular;
  color: #4D4D4D;
  font-weight: normal;
}

h3 {

  background-color: #333;
  border: 1px solid #000;
  border-radius: 3px;
  padding: 4px 7px 1px 7px;
  color: #EEE;
  margin-bottom: $container-margin;
  font-size: 1.2em;
  text-transform: uppercase;
}

h4 {
  font-size: 1.2em;
  margin: 0 0 10px;
  border-bottom: 1px solid #CCC;
  text-transform: uppercase;
}

p {
  font-size: 0.9rem;
}

legend {
  padding-top: 5px;
  font-size: 0.9rem;
  font-weight: bold;
}

label {
  font-size: 0.9rem;
  font-weight: bold;
  vertical-align: text-top;
  margin-bottom: 7px;
}

.has-tip {
  font-weight: normal;
  border: none;
}

.has-tip:hover {
  border: none;
  color: #217EB6;
}

.has-tip:after {
  content: " [?]";
  color: #217EB6;
  font-size: 0.9em;
}

input.invalid {
  background: #FFE4E4;
  border-color: #B60808;
}

button.tiny, .button.tiny {
  font-size: 11px;
  margin: 5px 0;
}


//////////////////////////////////////////
// Layout                               //
//////////////////////////////////////////


// Navbar

#nav-container {
  margin: 0px auto;
  width: 1010px;

  #navigation-create {
    color: #FFF;

    li {
      float: left;
      padding-top: 11px;
      margin-left: 20px;

      img {
        margin-right: 5px;
        margin-top: -4px;
      }
    }

    .social.first {
      margin-left: $leftIconSize;
    }

    .social {
      margin-right: 10px;

      img {
        margin: -4px 0px 0px;
      }
    }

    a {
      font-size: 0.9rem;
      color: #FFF;
      padding: 12px 0px;
    }
  }

  li.help {
    background: #0099cc;
    color: #FFF;

    a#trigger-help {
      padding-left: 17px;
      padding-right: 17px;
      background: #0099cc;

    }
  }


}


// Container: Wrapper for Toolbar and Content

.container {
  margin: 20px auto;
  width: 1010px;
}

.ui-container {
  border: 1px solid #CCC;
  border-radius: 3px;
  background: #FAFAFA;
  margin-bottom: $container-margin;
  padding: 5px 7px;

  h4, h4:hover {
    border-bottom: 1px solid #CCC;
  }
}


// Toolbar

#toolbar {
  width: $leftIconSize;
  float: left;
  margin-top: 20px;

  .icon {
    display: block;
    margin-bottom: 10px;
    width: 42px;
    height: 44px;
    vertical-align: middle;
    background-color: #BBBBBB;
    background-reapeat: no-repeat;
    background-position: center center;
    border: 1px solid #999;
    border-radius: 3px;
  }

  .icon:hover {
    background-color: #999;
    border: 1px solid #777;
  }

  .active {
    background-color: #333;
    border: 1px solid #000;
  }

  .toolbar-line {
    height: 2px;
    background: #CCC;
    border-top: 1px solid #CCC;
    border-bottom: 1px solid #FFF;
    margin: 10px 0px 10px 0px;
  }

  #trigger-type {
    background-image: url(../img/type.svg);
  }

  #trigger-data {
    background-image: url(../img/data.svg);
  }

  #trigger-color {
    background-image: url(../img/color.svg);
  }

  #trigger-icon {
    background-image: url(../img/icon.svg);
  }

  #trigger-text {
    background-image: url(../img/text.svg);
  }

  #trigger-adjustments {
    background-image: url(../img/adjustments.svg);
  }

  #trigger-scale {
    background-image: url(../img/scale.svg);
  }

}


// Display: Wrapper for the graphics and overlays

#display {
  width: 970px;
  height: 460px;
  margin-left: $leftIconSize;
  padding: 10px 10px 0 0;
  background: #FFF;
  background-image: url(../img/ruler.svg);
  background-repeat: no-repeat;
  position: relative;
  box-shadow: 0 0 2px 1px #AAA;

  #graph-container {
    overflow: hidden;
  }

  #graph {
    width: 100%;
    height: 100%;
  }

  .move-right {
    margin-left: $overlay-small-width;
  }

  .move-far-right {
    margin-left: $overlay-big-width;
  }

}


// Overlays

#overlay {

  height: auto;

  // Every Overlay Container
  .overlay-container {
    background: #EDEDED;
    position: absolute;
    height: 100%;
    width: $overlay-small-width;
    left: 0px;
    top: 0px;
    border-right: 1px solid #CCC;
    padding: 5px $container-margin;
    overflow: hidden;

    .overlay-left {
      // border-right: 1px solid #BBB;
      height: 400px;
      margin-right: $container-margin;
      width: 203px;
      float: left;
    }

    .overlay-right {
      // padding: 0px 10px 0px 20px;
      width: 317px;
      float: left;
    }
  }

  .overlay-container.help{
    background: #333;
    width: 425px;
    left: 545px;

    h1 {
      color: #fff;
    }

    h3 {
      background: #0099CC;
      color: #FFF;
      border-color: #0099CC;
    }

    .button {
      background: #BBBBBB;
      color: #333;
      float: left;
      width: 100px;
      border-color: #BBBBBB;
      border-width: 1px;
    }

    .active, .button:hover {
      background: #333333;
      color: #ffffff;
      border-color: #0099CC;
      border-width: 1px;
    }

    .tiny {
      padding: 0.625rem 0rem 0.6875rem;
    }

    .help-left {
      width: 110px;
      float:left;
    }

    .help-right {
      width: 298px;
      float: right;
      border-left: 1px solid #bbb;
      padding: 0px 0px 0px 10px;

      .help-step {
        border: 1px solid #0099CC;
        margin-bottom: 10px;

        .help-right-picture {
          width: 182px;
          height: 120px;
          margin-top: 10px;
        }

        .help-right-description {
          background: #005675;

          .help-right-number {
            background: #0099CC;
            color: #fff;
            width: 35px;
            float: left;
            padding: 10px;
            font-size: 18px;
            height: 45px;
          }

          .help-right-text {
            width: 147px;
            color: #fff;
            border-top: 1px solid #0099CC;
            float: left;
            padding: 10px;
          }
        }
      }
    }

    .help-nav {
      background: #bbbbbb;
      color: #333333;
      width: 95%;
      height: 40px;
      font-weight: bold;
      position: absolute;
      bottom: 7px;
      right: 8px;

      .button {
        width: auto;
        margin: 7px 10px 5px;
        background: #333333;
        color: #ffffff;
        border-color: #bbbbbb;
        border-width: 1px;
        padding: 5px 12px;
      }

      .button:hover {
        background: #BBBBBB;
        color: #333;
        border-color: #333333;
        border-width: 1px;
      }

      .help-nav-left {
        float: left;
      }

      .help-nav-center {
        float: left;
        margin: 15px 0 0 69px;
      }

      .help-nav-right {
        float: right;
      }
    }
  }


  // Data Overlay

  #overlay-data {
    textarea {
      max-width: 100%;
      min-width: 100%;
      min-height: 70px;
      margin-bottom: 10px;
    }

    #dataTable {
      width: 100%;
      overflow: scroll;

    }
  }


  // Type Overlay

  #overlay-type {
    vertical-align: middle;

    .select-type {
      margin-bottom: 5px;
      height: $leftIconSize;
      background-color: #BBB;
      border-radius: 3px;
      border: 1px solid #999;

      .type-title {
        color: #FFF;
        font-size: 1.1rem;
        font-weight: normal;
        margin-top: 14px;
        text-transform: uppercase;
      }
    }

    .select-type:hover {
      background-color: #999;
      border: 1px solid #777;
    }

    .select-type.active {
      background-color: #333;
      border: 1px solid #000;
    }

    .type-title {
      float: left;
      margin: 8px 0px 0px 10px;
    }

    .type-image {
      float: right;
      margin: 6px 10px 0 0;
    }

  }


  // Icon Overlay

  #overlay-icon {

    .group-container {
      height: $leftIconSize;
      margin-bottom: 7px;
    }

    .group-id {
      background-color: #EDEDED;
      width: 146px;
      height: $leftIconSize;
      float: left;
      border-top: 1px solid #bbb;
      border-bottom: 1px solid #bbb;
      border-left: 1px solid #bbb;
      padding: 13px 8px;

    }

    .group-icon {
      background-color: #FFF;
      width: $leftIconSize;
      height: $leftIconSize;
      float: left;
      border: 1px solid #CCC;
      padding: 3px;
    }

    .category-border {
      background-color: #FFF;
      width: $leftIconSize;
      height: $leftIconSize;
      float: left;
      margin-right: 10px;
      margin-bottom: 10px;

      border: 1px solid #bbb;
    }

    .category-icon {
      height: $leftIconSize;
      width: $leftIconSize;
      padding: 3px;
      cursor: move;
    }

    legend {
      clear: both;
      padding-top: 5px;
      margin-bottom: 5px;
    }

    [draggable] {
      -moz-user-select: none;
      -khtml-user-select: none;
      -webkit-user-select: none;
      user-select: none;
    }

  }


  // Color Overlay

  #overlay-color {

    .picker {
      margin: 5px 0px;
      padding: 3px 5px;
      border-right: 28px solid #000;
      line-height: 20px;
    }

    form legend {
      clear: both;
      padding-top: 5px;
      margin-bottom: 5px;
    }

    input[type='text']{
      width: 100%;
    }

    .colorpalette {

      height: 30px;
      margin-bottom: 15px;
      background: #FFF;
      border: 2px solid #FFF;
      overflow: hidden;
      float: left;
      clear: both;

      .colorbox {
        float: left;
        height: 30px;
        width: 30px;
      }

    }

    .active {
      background: #333;
      border-color: #333;
      box-shadow: 0 0 2px 1px #AAA;
    }

  }


  // Adjustments Overlay

  #overlay-adjustments {

  }


  // Scale Overlay

  #overlay-scale {

  }


  // Text Overlay

  #overlay-text {

  }


  #data-container, #icon-container, #color-container {
    width: $overlay-big-width;
  }


  .topic-line {
    border-bottom: 1px solid #BBB;
    margin: 0px 0px 15px 0px;
  }


  .normal-line {
    border-bottom: 1px solid #CCC;
    margin: 0px 0px 10px 0px;
  }


}

#message-box {
  margin-left: $leftIconSize;
  margin-top: $container-margin;
  margin-bottom: $container-margin;

  div {
    padding: 7px 10px;
    margin-bottom: 1px;
    border-radius: 3px;
  }

  #overflow-warning {
    background: #B32F01;
    color: #FFF;
  }
}

// Footer

#footer {
  margin: 15px 0 0 0;
  padding: 3px;
  font-size: 0.85em;
  color: #777;
  border-top: 1px solid #BBB;
}


// Modal

.reveal-modal {
    padding: 10px;

    form,
    .tiny {
      margin-bottom: 0;
    }

    .close-reveal-modal {
      font-size: 30px;
      line-height: 1;
      position: absolute;
      top: 8px;
      right: 16px;
      color: #ffffff;
      font-weight: bold;
      cursor: pointer;
    }


}

#modal-container {

  button.timy, .button.tiny {
    font-size: 11pt;
  }

  #new-modal {

  }

  #import-modal {

  }

  #export-modal {

  }

}

